--- a/Arcium.toml
+++ b/Arcium.toml
@@ -1,10 +1,4 @@
-[project]
-name = "blind-link"
-version = "0.1.0"
-
-[encrypted]
-circuit_dir = "encrypted-ixs"
-
-[cluster]
-offset = 456
-recovery_set_size = 4
+[localnet]
+nodes = 2
+localnet_timeout_secs = 60
+backends = ["Cerberus"]
