--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,8 @@
 [workspace]
-members = ["programs/*"]
+members = ["programs/*", "encrypted-ixs"]
 resolver = "2"
 
 [profile.release]
 overflow-checks = true
 lto = "fat"
 codegen-units = 1
-
-[workspace.dependencies]
-anchor-lang = "0.30.1"
-arcium-anchor = "0.3.0"
-arcis = "0.2.0"
