--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint app/src --ext .ts,.tsx"
   },
   "dependencies": {
-    "@arcium-hq/client": "^3.0.0",
-    "@coral-xyz/anchor": "^0.30.1",
+    "@arcium-hq/client": "^0.8.2",
+    "@coral-xyz/anchor": "^0.32.1",
     "@noble/curves": "^1.4.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
@@ -19,12 +19,13 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^10.0.0",
+    "@types/node": "^25.2.3",
     "@types/react": "^18.3.0",
     "chai": "^4.4.0",
+    "eslint": "^8.57.0",
     "mocha": "^10.7.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "^5.5.0",
-    "eslint": "^8.57.0"
+    "typescript": "^5.5.0"
   },
   "license": "MIT"
 }
