--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "memfs": "^4.56.10",
     "typescript": "^5.6.3",
     "vite": "^6.0.0",
     "vite-plugin-node-polyfills": "^0.25.0"
