--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,8 @@
 # Solana RPC endpoint (devnet)
+# Update with your own RPC or use public devnet endpoint
 VITE_SOLANA_RPC=https://api.devnet.solana.com
 
 # Program ID — updated after `arcium deploy`
-VITE_PROGRAM_ID=B1indLnkPS1xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Replace with your deployed program ID from Anchor.toml [programs.devnet]
+# Default below matches declare_id!() in programs/blind_link/src/lib.rs
+VITE_PROGRAM_ID=9TVgatCVVvFtmEkHD1VqC1hW6Ddy3TaWN1vqhdqgZYq5
