--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,5 @@
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
-  "include": ["src"],
-  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
+  "include": ["src"]
 }
