Fix CI: use npm install instead of npm ci for cross-version lockfile compat

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: ./app
-        run: npm ci
+        run: npm install
 
       - name: Run ESLint
         working-directory: ./app
