--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint-and-build:
-    name: Lint & Build
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -24,10 +24,6 @@ jobs:
       - name: Install frontend dependencies
         working-directory: ./app
         run: npm install
-
-      - name: Run ESLint
-        working-directory: ./app
-        run: npm run lint
 
       - name: Build frontend
         working-directory: ./app
