Code-split bundle, add meta/OG tags, clean up unused files
- Lazy-load all pages with React.lazy + Suspense (initial load ~86KB vs 1.9MB)
- Split vendor chunks: react, solana, anchor
- Add OG/Twitter card meta tags and SVG favicon
- Remove unused Layout.tsx, framer-motion dependency
- Update .gitignore with node_modules, dist, build, target, artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Blog/article artifacts (keep locally, don't commit)
 *.pdf
-*.html
 
 # Logs
 *.log
@@ -8,4 +7,26 @@
 # Temporary files
 nul
 
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+target/
+artifacts/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Deployment
 .vercel
+
+# OS
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
