--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,15 +21,13 @@ jobs:
           cache: 'npm'
           cache-dependency-path: app/package-lock.json
 
-      - name: Install root dependencies
-        run: npm install
-
       - name: Install frontend dependencies
         working-directory: ./app
         run: npm install
 
       - name: Lint
-        run: npm run lint
+        working-directory: ./app
+        run: npx eslint src --ext .ts,.tsx
 
       - name: Run frontend tests
         working-directory: ./app
