Fix CI pipeline: add ESLint plugins and vitest to app, fix contact normalization
- Install ESLint, TypeScript plugin, React plugins, and vitest in app/devDependencies
- Fix normalizeContact to strip leading @ before email detection (handles like @Username now match username)
- Downgrade react-hooks/set-state-in-effect to warning
- Run lint and tests from app/ working directory where dependencies live

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -26,7 +26,9 @@
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/set-state-in-effect": "warn"
   },
   "settings": {
     "react": {
