--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Lint
         working-directory: ./app
-        run: ./node_modules/.bin/eslint src --ext .ts,.tsx
+        run: npx eslint src --ext .ts,.tsx
 
       - name: Run frontend tests
         working-directory: ./app
